--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "scripts": {
     "start": "node ./bin/www"
   },
+  "devDependencies": {
+  "morgan": ">=1.9.1"
+},
   "dependencies": {
     "body-parser": "~1.15.2",
     "cookie-parser": "~1.4.3",
@@ -13,7 +16,6 @@
     "express-session": "^1.14.2",
     "hbs": "~4.0.1",
     "mongoose": "^4.6.6",
-    "morgan": "~1.7.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "serve-favicon": "~2.3.0"
